# WebMfx

./: CMakeLists.txt  CMakePresets.json  README.md  build.bat  build_release.bat  run_dev_server.bat  set_env.bat
cmake/: WebMfx.cmake
css/: style.css
js/: main.js  spreadsheet.js
src/: BoxPlugin.c  ComputeNormalsPlugin.c  binding.idl  main.c  plugin.c  plugin2.c  test.html  webmfx.cpp
src/html_templates/: index.html
src/openmfx-sdk/c/common/: common.h
src/openmfx-sdk/c/host/: meshEffectSuite.c  meshEffectSuite.h  parameterSuite.c  parameterSuite.h  types.c  types.h
tests/hellogl/: build.bat
tests/hellogl/src/: main.cpp
tests/hellogl/src/Augen/: CMakeLists.txt  Camera.cpp  Camera.h  ColorLayerInfo.h  DrawCall.cpp  DrawCall.h  Framebuffer.cpp  Framebuffer.h  GlobalTimer.cpp  GlobalTimer.h  GroupObject.cpp  GroupObject.h  NonCopyable.h  OpenGL  Ray.cpp  Ray.h  ReflectionAttributes.h  RenderTarget.cpp  RenderTarget.h  RuntimeObject.h  ScopedFramebufferOverride.h  ShaderPool.cpp  ShaderPool.h  ShaderPreprocessor.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TinyTimer.h  TurntableCamera.cpp  TurntableCamera.h
tests/hellogl/src/Augen/Ui/: BaseApp.cpp  BaseApp.h  Dialog.h  Window.cpp  Window.h
tests/hellogl/src/Augen/utils/: debug.cpp  fileutils.cpp  fileutils.h  macros.h  reflutils.cpp  reflutils.h  streamutils.h  strutils.cpp  strutils.h
tests/hellogl/src/Ui/: App.cpp  App.h
tests/undefined-symbol/: README.md  build.bat  main.c  plugin.c  run_dev_server.bat
tools/: dev_server.py
